--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+#map-container {
+	display: inline-block;
+	width: 700px;
+	height: 300px;
+	margin-top:75px;
+}
