--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,19 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
+		<div>
+			<% if current_skater %> 
+				<ul> 
+					<li><%= current_skater.email %></li> 
+					<li><%= link_to "Log out", logout_path, method: "delete" %></li> 
+				</ul> 
+			<% else %> 
+				<ul> 
+					<li><%= link_to "Login", 'login' %></a></li> 
+					<li><%= link_to "Signup", 'signup' %></a></li> 
+				</ul> 
+			<% end %>
+		</div>
 		<%= yield %>
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
