--- a/app/assets/javascripts/spots.js.erb
+++ b/app/assets/javascripts/spots.js.erb
@@ -20,30 +20,7 @@ $(document).ready(function() {
 		var map;
 	  	var mapOptions = {
 	    	zoom: 11,
-	    	mapTypeId: google.maps.MapTypeId.ROAD,
-	    	styles: [
-	    		{
-			        "featureType": "all",
-			        "elementType": "all",
-			        "stylers": [
-			            {
-			                "invert_lightness": true
-			            },
-			            {
-			                "saturation": 10
-			            },
-			            {
-			                "lightness": 30
-			            },
-			            {
-			                "gamma": 0.5
-			            },
-			            {
-			                "hue": "#435158"
-			            }
-			        ]
-		    	}
-			]
+	    	mapTypeId: google.maps.MapTypeId.ROAD
 	  	};
 
 	  	var positions = [];
