--- a/app/views/skaters/new.html.erb
+++ b/app/views/skaters/new.html.erb
@@ -4,6 +4,6 @@
 	<%= f.label :email %>
 	<%= f.email_field :email %><br>
 	<%= f.label :password %>
-	<%= f.password_field :password %><br>
+	<%= f.password_field :password %><br><br>
 	<%= f.submit 'Signup' %>
 <% end %>
