--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -3,5 +3,6 @@
 		<div id="map-container"></div>
 	</div>
 </div>
-
-<button class="find-nearest-spot">Find nearest spot</button>
+<br>
+<button class="nearest-spot">Nearest spot</button>
+<button class="random-spot">Random spot</button>
