--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,22 @@
 	  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	</head>
 	<body>
-		<div>
-			<% if current_skater %> 
-				<ul> 
-					<li><%= current_skater.email %></li> 
-					<li><%= link_to "Log out", logout_path, method: "delete" %></li> 
-				</ul> 
-			<% else %> 
-				<ul> 
-					<li><%= link_to "Log in", login_path %></a></li> 
-					<li><%= link_to "Sign up", signup_path %></a></li>
-				</ul> 
-			<% end %>
-		</div>
+		<header>
+			<div class="logo"><a href="/">(&nbsp;&nbsp;SKATE TEMPLE&nbsp;&nbsp;)</a></div>
+			<div class="account-nav">
+				<% if current_skater %> 
+					<ul> 
+						<li><%= current_skater.email %></li> 
+						<li class="account-actions"><%= link_to "Log out", logout_path, method: "delete" %></li> 
+					</ul> 
+				<% else %> 
+					<ul> 
+						<li class="account-actions"><%= link_to "Log in", login_path %></a></li> 
+						<li class="account-actions"><%= link_to "Sign up", signup_path %></a></li>
+					</ul> 
+				<% end %>
+			</div>
+		</header>
 		<%= yield %>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=geometry"></script>
 		<%= javascript_include_tag 'application' %>
