--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,12 +26,8 @@ body {
 	text-align: center;
 }
 
-a, a:hover, a:focus {
+a, a:hover, a:focus, a:visited {
 	text-decoration: none;
-}
-
-ul, li {
-	list-style: none;
 }
 
 .logo {
@@ -43,7 +39,23 @@ ul, li {
 	display: inline-block;
 }
 
+.navigation-elements {
+	display: inline-block;
+	border: 3px solid #337ab7;
+	border-radius: 3px;
+	padding: 5px 20px;
+	color: #337ab7;
+	font-weight: bold;
+}
+
+.navigation-elements:hover {
+	border: 3px solid #337ab7;
+	background: #337ab7;
+	color: white;
+	font-weight: bold;
+}
+
 #map-container {
 	height: 400px;
-	margin: 0 10px;
+	margin: 0 30px;
 }
