--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,10 @@
 				<% end %>
 			</div>
 		</header>
-		<!--<nav>
+		<nav>
 			<div class="navigation-elements">Free Skate</div>
 			<div class="navigation-elements">Challenges</div>
-			<div class="navigation-elements">Top Skaters</div>
-		</nav>-->
+		</nav><br>
 		<%= yield %>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=geometry"></script>
 		<%= javascript_include_tag 'application' %>
