--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,8 +1,8 @@
-<%= form_for [@spot, :challenge] do |f| %>
+<%= form_for @challenge do |f| %>
 	<%= f.label :challenge %>
 	<%= f.text_field :challenge %><br>
 	<%= f.label :challenge_spot %>
-	<%= f.text_field :challenge_spot %><br>
+	<%= f.text_field :challenge_spot, :value => @spot %><br>
 	<%= f.label :score %>
 	<%= f.text_field :score %> <br>
 	<%= f.label :skater_challenged %>
