--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -37,8 +37,6 @@
 <br>
 <% if session[:id] %>
 	<a href="<%= new_skater_trick_path(session[:id]) %>?spot_id=<%= @spot.id %>">Add trick</a>
-	<br>
-	<a href="/spots/<%= @spot.id %>/new-challenge">Add challenge</a>
 <% else %>
-	<span>You need to <a href="<%= login_path %>">login</a> in order to add a trick or a challenge</span>
+	<span>You need to <a href="<%= login_path %>">login</a> in order to add a trick</span>
 <% end %>
