Challenges for a specific skater functionality added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,6 +46,7 @@ a, a:hover, a:focus, a:visited {
 	padding: 5px 20px;
 	color: #337ab7;
 	font-weight: bold;
+	cursor:pointer;
 }
 
 .navigation-elements:hover {
