--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
 					<div class="account-actions"><%= link_to "Sign up", signup_path %></div>
 				<% end %>
 			</div>
-		</header>
+		</header><br>
 		<nav>
 			<div class="navigation-elements">Free Skate</div>
-			<div class="navigation-elements">Challenges</div>
+			<a href="/challenges"><div class="navigation-elements">Challenges</div></a>
 		</nav><br>
 		<%= yield %>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=geometry"></script>
