--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 			</div>
 		</header><br>
 		<nav>
-			<div class="navigation-elements">Free Skate</div>
+			<a href="/spots"><div class="navigation-elements">Free Skate</div></a>
+			<a href="/challenges"><div class="navigation-elements">Skate Jams</div></a>
 			<a href="/challenges"><div class="navigation-elements">Challenges</div></a>
 		</nav><br>
 		<%= yield %>
