Jams functionality completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 		</header><br>
 		<nav>
 			<a href="/spots"><div class="navigation-elements">Free Skate</div></a>
-			<a href="/challenges"><div class="navigation-elements">Skate Jams</div></a>
+			<a href="/jams"><div class="navigation-elements">Skate Jams</div></a>
 			<a href="/challenges"><div class="navigation-elements">Challenges</div></a>
 		</nav><br>
 		<%= yield %>
