--- a/app/views/skater_challenges/index.html.erb
+++ b/app/views/skater_challenges/index.html.erb
@@ -1,3 +1,5 @@
+<h2>Challenges</h2>
+
 <% @challenges.each do |challenge| %>
-	<%= challenge.challenge %> (<%= challenge.score %> points)
+	<%= challenge.challenge %> (<%= challenge.score %> points)<br>
 <% end%>
