--- a/app/assets/javascripts/spots.js.erb
+++ b/app/assets/javascripts/spots.js.erb
@@ -60,17 +60,16 @@ $(document).ready(function() {
 		    	google.maps.event.addDomListener(yourPositionMarker, 'dragend', function() {
 		    		var latitude = yourPositionMarker.getPosition().lat();
 		    		var longitude = yourPositionMarker.getPosition().lng();
-		    		var address;
+					var latLng = new google.maps.LatLng(latitude, longitude);
 
-		    		var latLng = new google.maps.LatLng(latitude, longitude);
 		    		var geocoder = new google.maps.Geocoder();
 
 		    		geocoder.geocode({ 'latLng': latLng }, function(results, status) {
 		    			if(status == google.maps.GeocoderStatus.OK) {
-		    				if(results) {
-		    					address = results[0].formatted_address;
-alert(address);
-		    					var infoWindowYourPositionContent = '<a class="add-spot-button" href=/spots/new?latitude=' + latitude + '&address=' + address + '&address2=aa>Add spot here</a>';
+		    				if(results[0]) {
+		    					var address = results[0].formatted_address;
+		    					alert(address);
+		    					var infoWindowYourPositionContent = '<a class="add-spot-button" href=/spots/new?latitude=' + latitude + '&longitude=' + longitude + '&address=' + address + '>Add spot here</a>';
 
 						    	var infoWindowYourPosition = new google.maps.InfoWindow({
 						    		content: infoWindowYourPositionContent
