--- a/app/views/skater_challenges/index.html.erb
+++ b/app/views/skater_challenges/index.html.erb
@@ -1,5 +1,6 @@
 <h2>Challenges</h2>
 
 <% @challenges.each do |challenge| %>
-	<%= challenge.challenge %> (<%= challenge.score %> points)<br>
+	<%= challenge.challenge %> (<%= challenge.score %> points)
+	<a href="/skaters/<%= @skater.id %>/tricks/new?spot_id=<%= challenge.challenge_spot %>">Try</a><br>
 <% end%>
