--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -6,5 +6,4 @@
 <br>
 <button class="nearest-spot">Nearest spot</button>
 <button class="random-spot">Random spot</button>
-
-<%= @client %>
+<button><a class="add-spot">Add spot here</a></button>
