--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -12,8 +12,6 @@
 	<%= f.label :longitude %>
 	<%= f.text_field :longitude, :value => @longitude %><br>
 	<%= f.label :address %>
-	<%= f.text_field :address, :value => @address %><br>
-	<%= f.label :address2 %>
-	<%= f.text_field :address2, :value => @address2 %><br><br>
+	<%= f.text_field :address, :value => @addressOk %><br><br>
 	<%= f.submit 'Add spot' %>
 <% end %>
