--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -6,6 +6,6 @@
 	<%= f.label :score %>
 	<%= f.text_field :score %> <br>
 	<%= f.label :skater_challenged %>
-	<%= f.text_field :skater_challenged %><br>
+	<%= f.text_field :skater_challenged %><br><br>
 	<%= f.submit 'Add challenge' %>
 <% end %>
