--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -2,9 +2,9 @@
 	<%= f.label :spot_id %>
 	<%= f.text_field :spot_id %><br>
 	<%= f.label :date %>
-	<%= f.text_field :date %><br>
+	<%= f.date_field :date %><br>
 	<%= f.label :time %>
-	<%= f.text_field :time %> <br>
+	<%= f.time_field :time %> <br>
 	<%= f.label :info %>
 	<%= f.text_field :info %><br><br>
 	<%= f.submit 'Add jam' %>
