--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>SkateTemple</title>
+	  <title>Skate or Bye</title>
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	  <%= stylesheet_link_tag 'application', media: 'all' %>
 	  <%= csrf_meta_tags %>
@@ -27,7 +27,7 @@
 		  </div>
 		</div>
 		<header>
-			<div class="logo"><a href="/">(&nbsp;&nbsp;SKATE TEMPLE&nbsp;&nbsp;)</a></div>
+			<div class="logo"><a href="/">(&nbsp;&nbsp;&nbsp;SKATE&nbsp;&nbsp;OR&nbsp;&nbsp;BYE&nbsp;&nbsp;&nbsp;)</a></div>
 			<div class="account-nav">
 				<% if current_skater %> 
 					<div class="account-actions"><%= current_skater.email %></div> 
